<?xml version="1.0"?>
<package format="2">
  <name>aeplanner</name>
  <version>1.0.0</version>
  <description>The Autonomous Exploration Planner package</description>

  <maintainer email="magse761@student.liu.se">Magnus Selin</maintainer>

  <license>BSD-3-Clause</license>

  <author>Magnus Selin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>kdtree</depend>
  <depend>pigain</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrs_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>