<?xml version="1.0"?>
<package format="2">
  <name>rpl_exploration</name>
  <version>0.0.0</version>
  <description>The rpl_exploration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mgse761@student.liu.se">mseln</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD-3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rpl_exploration</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>aeplanner</depend>
  <depend>cv_bridge</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_modules_msgs</depend>
  <depend>mrs_subt_planning_lib</depend>
  <depend>nodelet</depend>
  <depend>nav_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>opencv2</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rrtplanner</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>dynamic_edt_3d</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/rpl_exploration_nodelets.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>